--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,11 @@ on:
 
 jobs:
   deployment:
-    runs-on: self-hosted
+    name: Deploy Application
+    runs-on: ubuntu-latest
+    env:
+      VUE_APP_API_URL: ${{ secrets.VUE_APP_API_URL }}
+      VUE_APP_STRIPE_PUBLIC_KEY: ${{ secrets.VUE_APP_STRIPE_PUBLIC_KEY }}
 
     steps:
       - name: checkout code
@@ -19,10 +23,3 @@ jobs:
         run: |
           echo "Installing application level dependencies"
           npm install
-      - name: Delete Existing process
-        run: |
-          pm2 delete node-js || true
-      - name: start application
-        run: |
-          echo "Starting application"
-          pm2 start "npm run serve" --name="node-js"
