this is added from main rep

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -23,3 +23,6 @@ jobs:
         run: |
           echo "Installing application level dependencies"
           npm install
+      - name: Build Application
+        run: |
+          npm run build
