--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -9,20 +9,63 @@ on:
       - main
 
 jobs:
-  deployment:
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node JS
+        uses: actions/setup-node@v2
+        with:
+          node-version: "22"
+
+      - name: Install Application Level Dependencies
+        run: |
+          npm i
+
+      - name: Run Unit Tests
+        run: |
+          npm run test
+
+  Build:
     name: Deploy Application
     runs-on: ubuntu-latest
-    env:
-      VUE_APP_API_URL: ${{ secrets.VUE_APP_API_URL }}
-      VUE_APP_STRIPE_PUBLIC_KEY: ${{ secrets.VUE_APP_STRIPE_PUBLIC_KEY }}
 
     steps:
       - name: checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Node Js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "22"
+
       - name: Install Application Level Dependencies
         run: |
-          echo "Installing application level dependencies"
           npm install
+
       - name: Build Application
         run: |
           npm run build
+
+  Deploy:
+    needs: Build
+
+    name: Deploy to Production
+    runs-on: self-hosted
+
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v2
+
+      - name: Install Application Level Dependencies
+        run: |
+          npm i
+
+      - name: Deploy Application
+        run: |
+          pm2 delete "node-js" || true
+          pm2 start "npm run serve" --name "node-js"
